--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,7 @@ author:
   name: Axel Persinger
   email: me@axelp.io
 description: > # this means to ignore newlines until "show_excerpts:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+Technical blog discussing reverse engineering, detections engineering, exploit development, and other cybersecurity topics.
 
 show_excerpts: true # set to true to show excerpts on the homepage
 
