--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,8 @@ author:
   name: Axel Persinger
   email: me@axelp.io
 description: > # this means to ignore newlines until "show_excerpts:"
-Technical blog discussing reverse engineering, detections engineering, exploit development, and other cybersecurity topics.
+  Technical blog discussing reverse engineering, detections engineering, 
+  exploit development, and other cybersecurity topics.
 
 show_excerpts: true # set to true to show excerpts on the homepage
 
