--- a/_config.yml
+++ b/_config.yml
@@ -50,6 +50,7 @@ minima:
 # this and add the path to the pages in order as they should show up
 header_pages:
  - about.md
+ - cves.md
 
 # Build settings
 theme: minima
