--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minima:
 
   # generate social links in footer
   social_links:
-    twitter: CuckooEXE
+    # twitter: CuckooEXE
     github:  CuckooEXE
     # devto: CuckooEXE
     # dribbble: jekyll
