--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,7 @@ author:
   name: Axel Persinger
   email: me@axelp.io
 description: > # this means to ignore newlines until "show_excerpts:"
-  Technical blog discussing reverse engineering, detections engineering, 
-  exploit development, capability development, and other cybersecurity topics.
+  Technical blog for RE/VR/etc.
 
 show_excerpts: true # set to true to show excerpts on the homepage
 
